--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EventCreator MEAN",
+  "name": "eventcreator-mean",
   "version": "0.0.1",
   "description": "Sample application.",
   "scripts": {
