--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Sample application.",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "main": "server.js",
